--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,15 +27,16 @@ jobs:
       - name: Build Next Project
         run: yarn build
 
-      - name: Google Cloud Auth
-        uses: "google-github-actions/auth@v2"
-        with:
-          credentials_json: "${{ secrets.GCP_SA_KEY }}"
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
+      # Deployment to GKE (Disable for now)
+      # - name: Google Cloud Auth
+      #   uses: "google-github-actions/auth@v2"
+      #   with:
+      #     credentials_json: "${{ secrets.GCP_SA_KEY }}"
+      #     project_id: ${{ secrets.GCP_PROJECT_ID }}
 
-      - name: Set up Cloud SDK
-        uses: "google-github-actions/setup-gcloud@v2"
+      # - name: Set up Cloud SDK
+      #   uses: "google-github-actions/setup-gcloud@v2"
 
-      - name: Deploy to Google App Engine
-        run: |
-          gcloud app deploy app.yaml --quiet
+      # - name: Deploy to Google App Engine
+      #   run: |
+      #     gcloud app deploy app.yaml --quiet
