--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,48 +1,90 @@
 {
+  "plugins": ["@typescript-eslint", "unused-imports", "import", "react-perf"],
   "env": {
+    "browser": true,
+    "es6": true,
+    "commonjs": true,
     "node": true,
-    "es2021": true,
-    "browser": true
+    "mocha": true,
+    "jest": true
   },
-  "globals": {
-    "React": true
+  "settings": {
+    "react": {
+      "pragma": "React",
+      "version": ">=17.0.2"
+    }
   },
-  "extends": [
-    "airbnb",
-    "prettier",
-    "eslint:recommended",
-    "next/core-web-vitals"
-  ],
-  "parserOptions": {
-    "ecmaVersion": 12,
-    "sourceType": "module",
-    "ecmaFeatures": { "jsx": true }
-  },
-  "plugins": ["prettier"],
   "rules": {
-    "no-shadow": "off",
+    "quote-props": ["error", "as-needed"],
+    "no-undef": 0,
+    "no-extra-semi": 2,
+    "no-trailing-spaces": [
+      1,
+      {
+        "skipBlankLines": true
+      }
+    ],
+    "no-unreachable": 2,
+    "react/no-unescaped-entities": "off",
+    "react/display-name": "off",
+    "prefer-arrow-callback": 1,
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [".ts", ".tsx", ".jsx"]
+      }
+    ],
+    "strict": "off",
+    "padded-blocks": "off",
+    "comma-dangle": ["never"],
+    "no-param-reassign": "off",
     "arrow-body-style": "off",
-    "import/extensions": "off",
-    "curly": ["error", "multi"],
-    "react/button-has-type": "off",
-    "react/react-in-jsx-scope": "off",
-    "react/jsx-filename-extension": "off",
-    "import/prefer-default-export": "warn",
-    "semi": 0, // let it handle by prettier
-    "react/function-component-definition": "off",
-    "indent": "off", // let it handle by prettier
-    "max-len": "off", // let it handle by prettier
-    "comma-dangle": "off", // let it handle by prettier
-    "no-redeclare": "off", // let it handle by TypeScript
-    "react/jsx-indent": "off", // let it handle by prettier
-    "no-unused-vars": "off", // let it handle by TypeScript
-    "prettier/prettier": ["error", { "endOfLine": "auto" }],
-    "operator-linebreak": "off", // let it handle by prettier
-    "object-curly-newline": "off", // let it handle by prettier
-    "function-paren-newline": "off", // let it handle by prettier
-    "implicit-arrow-linebreak": "off", // let it handle by prettier
-    "react/require-default-props": "off", // let it handle by TypeScript
-    "nonblock-statement-body-position": "off", // let it handle by prettier
-    "react/jsx-one-expression-per-line": "off" // let it handle by prettier
-  }
+    "no-else-return": "error",
+    "require-atomic-updates": "error",
+    "dot-notation": "off",
+    "linebreak-style": ["error", "windows"],
+    // "semi": ["error", "always"],
+    "semi": "off",
+    "@typescript-eslint/semi": "warn",
+    "@typescript-eslint/no-empty-function": "off",
+    "@typescript-eslint/no-unused-vars": "off",
+    "unused-imports/no-unused-imports": "error",
+    "@typescript-eslint/no-explicit-any": "error",
+    "react/function-component-definition": "error",
+    "@typescript-eslint/no-var-requires": "warn",
+    "prefer-const": "warn",
+    "@typescript-eslint/ban-ts-comment": "warn",
+    "@typescript-eslint/no-empty-interface": "off",
+    "react-hooks/exhaustive-deps": "off",
+    "react-perf/jsx-no-new-function-as-prop": "warn",
+    "react-perf/jsx-no-new-array-as-prop": "off", //todo: enable when fixing all codebase
+    "react-perf/jsx-no-new-object-as-prop": "off", //todo: enable when fixing all codebase
+    "object-shorthand": "error"
+  },
+  "overrides": [
+    {
+      "files": ["next-i18next.config.js", "next.config.js"],
+      "rules": {
+        "@typescript-eslint/no-var-requires": "off"
+      }
+    },
+    {
+      "files": ["pages/**/*.tsx", "pages/**/*.ts"],
+      "rules": {
+        "import/no-default-export": "off"
+      }
+    },
+    {
+      "files": ["src/components/**/*.tsx", "src/screens/**/*.tsx"],
+      "rules": {
+        "import/no-default-export": "error"
+      }
+    }
+  ],
+  "extends": [
+    "next/core-web-vitals",
+    "prettier",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:react-perf/recommended"
+  ]
 }
