--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky"
+    "debug": "NODE_OPTIONS='--inspect' next dev",
+    "test": "jest",
+    "test:watch": "jest -o --watch",
+    "lint:fix": "next lint --dir pages",
+    "prettier": "prettier --write \"src/**/*.{ts,tsx,js,jsx}\" \"pages/**/*.{ts,tsx,js,jsx}\"",
+    "typecheck": "tsc --pretty --skipLibCheck --noEmit",
+    "analyze": "NODE_ENV=development ANALYZE=true next build",
+    "prepare": "npx husky install"
   },
   "dependencies": {
     "-": "^0.0.1",
@@ -29,11 +36,25 @@
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
-    "typescript": "^5"
-  },
-  "lint-staged": {
-    "**/*.{ts,tsx}": [
-      "npm run beautify"
-    ]
+    "typescript": "^5",
+    "@next/bundle-analyzer": "^13.0.5",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@types/google.maps": "^3.50.5",
+    "@types/jest": "29.4.0",
+    "@types/prettier": "^2.7.1",
+    "@types/react-slick": "^0.23.10",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "autoprefixer": "^10.4.13",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-react-perf": "^3.3.1",
+    "eslint-plugin-unused-imports": "2.0.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.2.2",
+    "prettier": "^2.8.0",
+    "pretty-quick": "^3.1.3",
+    "ts-jest": "^29.0.3",
+    "typecheck": "^0.1.2"
   }
 }
