--- a/package.json
+++ b/package.json
@@ -19,42 +19,43 @@
   "dependencies": {
     "-": "^0.0.1",
     "D": "^1.0.0",
+    "cssnano": "^7.0.3",
     "next": "14.2.4",
     "prettier": "^2.8.0",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^14.2.4",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8.41.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-next": "14.2.4",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.7",
-    "typescript": "^5",
     "@next/bundle-analyzer": "^13.0.5",
+    "@next/eslint-plugin-next": "^14.2.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/google.maps": "^3.50.5",
     "@types/jest": "29.4.0",
+    "@types/node": "^20",
     "@types/prettier": "^2.7.1",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "autoprefixer": "^10.4.13",
+    "eslint": "^8.41.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-next": "14.2.4",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react-perf": "^3.3.1",
     "eslint-plugin-unused-imports": "2.0.0",
+    "husky": "^9.0.11",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.2.2",
+    "lint-staged": "^15.2.7",
     "prettier": "^2.8.0",
     "pretty-quick": "^3.1.3",
     "ts-jest": "^29.0.3",
-    "typecheck": "^0.1.2"
+    "typecheck": "^0.1.2",
+    "typescript": "^5"
   }
 }
